--- a/E-commerceMVCProject/Views/Account/Register.cshtml
+++ b/E-commerceMVCProject/Views/Account/Register.cshtml
@@ -10,7 +10,7 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Register">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="UserName" class="control-label"></label>
                 <input asp-for="UserName" class="form-control" />
@@ -20,6 +20,12 @@
                 <label asp-for="Email" class="control-label"></label>
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
+                @if (TempData.ContainsKey("Emailfound"))
+                {
+                    <div class="text-danger" >
+                        @TempData["Emailfound"]
+                    </div>
+                }
             </div>
             <div class="form-group">
                 <label asp-for="Password" class="control-label"></label>
