--- a/E-commerceMVCProject/Views/Profile/PersonalData.cshtml
+++ b/E-commerceMVCProject/Views/Profile/PersonalData.cshtml
@@ -1,4 +1,4 @@
-﻿@model E_commerceMVCProject.viewmodels.PersonalDataVM
+﻿@model E_commerceMVCProject.viewmodels.RegisterVM
 <div>
     <dl class="row">
         <dt class = "col-sm-2">
