--- a/E-commerceMVCProject/Views/Account/Login.cshtml
+++ b/E-commerceMVCProject/Views/Account/Login.cshtml
@@ -4,41 +4,51 @@
     ViewData["Title"] = "Login";
 }
 
-<h1>Login</h1>
-
-<hr />
-<div class="row">
-    <div class="col-md-4">
+<!-- login -->
+<div class="container py-16">
+    <div class="max-w-lg mx-auto shadow px-6 py-7 rounded overflow-hidden">
+        <h2 class="text-2xl text-center uppercase font-medium mb-6">
+            Login
+        </h2>
         <form asp-action="Login">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="UserName" class="control-label"></label>
-                <input asp-for="UserName" class="form-control" />
-                <span asp-validation-for="UserName" class="text-danger"></span>
+            <div asp-validation-summary="ModelOnly" class="text-red"></div>
+            <div class="">
+                <label asp-for="UserName" class="text-gray-600 mb-2 block">
+                    UserName  <span class="text-primary">*</span>
+                </label>
+                <input asp-for="UserName" id="email"
+                                   class="inputForm block w-full border border-gray-300 px-4 py-3 text-gray-600 text-sm rounded focus:ring-0 focus:outline-none placeholder-gray-400"
+                                   placeholder="Enter your UserName "/>
+                <span asp-validation-for="UserName" class="text-primary"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Password" class="control-label"></label>
-                <input asp-for="Password" class="form-control" />
-                <span asp-validation-for="Password" class="text-danger"></span>
+            <div class="">
+                <label asp-for="Password" class="text-gray-600 mb-2 block">
+                    Password  <span class="text-primary">*</span>
+                </label>
+                <input asp-for="Password" id="password"
+                       type="password"
+                       class="inputForm block w-full border border-gray-300 px-4 py-3 text-gray-600 text-sm rounded focus:ring-0 focus:outline-none placeholder-gray-400"
+                       placeholder="Enter your password " />
+                <span asp-validation-for="Password" class="text-primary"></span>
             </div>
-            <div class="form-group form-check">
+            <div class="flex items-center justify-between mt-6">
                 <label class="form-check-label">
                     <input class="form-check-input" asp-for="RememebrMe" /> @Html.DisplayNameFor(model => model.RememebrMe)
                 </label>
-            </div>
-            <div class="form-group form-check">
-                <a asp-action="ForgotPassword">ForgotPassword?</a>
+                <a asp-action="ForgotPassword" class="text-primary">ForgotPassword?</a>
             </div>
             <div class="form-group">
-                <input type="submit" value="Login" class="btn btn-primary" />
+                <input type="submit" value="Login" class="bolck w-full py-2 text-center text-white bg-primary border border-primary rounded hover:bg-transparent hover:text-primary transition uppercase font-roboto font-medium" />
             </div>
         </form>
+
+        <p class="mt-4 text-gray-600 text-center">
+            Don't have an account ?
+            <a asp-controller="Account" asp-action="Register" class="text-primary">Register Now</a>
+        </p>
     </div>
 </div>
-
-<div>
-    <a asp-action="Register">Don't Have Account ? </a>
-</div>
+<!-- login-end -->
 
 @section Scripts {
     @{
