--- a/E-commerceMVCProject/Views/ShoppingCart/Index.cshtml
+++ b/E-commerceMVCProject/Views/ShoppingCart/Index.cshtml
@@ -40,7 +40,7 @@
                             <!-- product-image -->
                             <div class="w-20">
                                 <img class="h-24"
-                                 src="~/img/@item.Product.Images.ElementAt(0).ImageName"
+                                 src="~/images/@item.Product.Name/@item.Product.Images.ElementAt(0).ImageName"
                                  alt="" />
                             </div>
                             <!-- product-name -->
