--- a/E-commerceMVCProject/Views/_ViewImports.cshtml
+++ b/E-commerceMVCProject/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using E_commerceMVCProject
 @using E_commerceMVCProject.Models
+@using E_commerceMVCProject.viewmodels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
